Changed to not use deprecated URL constructor